# docs/swagger.json
@@ -40,19 +40,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.TaskListResponse"
+                            "$ref": "#/definitions/modules_task_handlers.TaskListResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     }
                 }
@@ -76,7 +76,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/modules_task_handlers.CreateTaskRequest"
                         }
                     }
                 ],
@@ -84,19 +84,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/handler.SuccessResponse"
+                            "$ref": "#/definitions/modules_task_handlers.SuccessResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     }
                 }
@@ -129,25 +129,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.TaskDetailsResponse"
+                            "$ref": "#/definitions/modules_task_handlers.TaskDetailsResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     }
                 }
@@ -179,7 +179,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/modules_task_handlers.CreateTaskRequest"
                         }
                     }
                 ],
@@ -187,25 +187,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.SuccessResponse"
+                            "$ref": "#/definitions/modules_task_handlers.SuccessResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     }
                 }
@@ -236,25 +236,71 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.SuccessResponse"
+                            "$ref": "#/definitions/modules_task_handlers.SuccessResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+                            "$ref": "#/definitions/modules_task_handlers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/signup": {
+            "post": {
+                "description": "Register a new user with the input payload",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Register a new user",
+                "parameters": [
+                    {
+                        "description": "User object that needs to be added",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/tasks_com_modules_identity_dto.SignUpDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/modules_identity_handlers.CreatedOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/modules_identity_handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/modules_identity_handlers.ErrorResponse"
                         }
                     }
                 }
@@ -262,7 +308,27 @@
         }
     },
     "definitions": {
-        "handler.CreateTaskRequest": {
+        "modules_identity_handlers.CreatedOK": {
+            "type": "object",
+            "properties": {
+                "id": {}
+            }
+        },
+        "modules_identity_handlers.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "modules_task_handlers.CreateTaskRequest": {
             "type": "object",
             "required": [
                 "description",
@@ -281,7 +347,7 @@
                 }
             }
         },
-        "handler.ErrorResponse": {
+        "modules_task_handlers.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -292,7 +358,7 @@
                 }
             }
         },
-        "handler.SuccessResponse": {
+        "modules_task_handlers.SuccessResponse": {
             "type": "object",
             "properties": {
                 "data": {},
@@ -304,7 +370,7 @@
                 }
             }
         },
-        "handler.TaskDetailsResponse": {
+        "modules_task_handlers.TaskDetailsResponse": {
             "type": "object",
             "properties": {
                 "data": {
@@ -335,7 +401,7 @@
                 }
             }
         },
-        "handler.TaskListResponse": {
+        "modules_task_handlers.TaskListResponse": {
             "type": "object",
             "properties": {
                 "data": {
@@ -360,6 +426,29 @@
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "tasks_com_modules_identity_dto.SignUpDto": {
+            "type": "object",
+            "required": [
+                "email",
+                "first_name",
+                "last_name",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         }
